test/libsolidity/syntaxTests/storageLayoutSpecifier/inheriting_from_itself.sol
contract C layout at 42 is C { }
// ----
// TypeError 2449: (27-28): Definition of base has to precede definition of derived contract
